--- a/NoteApp/NoteApp.csproj
+++ b/NoteApp/NoteApp.csproj
@@ -11,16 +11,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NoteInfomation.cs" />
+    <Compile Remove="pages\HomePage.xaml.cs" />
+    <Compile Remove="pages\NoteListPage.xaml.cs" />
+    <Compile Remove="repostiory\NoteInformationDataBase.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="pages\HomePage.xaml" />
+    <EmbeddedResource Remove="pages\NoteListPage.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="pages\HomePage.xaml">
+    <EmbeddedResource Update="pages\AddNotePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="pages\NoteListPage.xaml">
+    <EmbeddedResource Update="pages\ListOfNotes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
